# jira-execution-planner

./: .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  AGENTS.md  ALERT_RULES.md  CLAUDE.md  Dockerfile  INSTALL.md  LICENSE  Makefile  QUICKSTART_ENV.txt  README.md  SCENARIO_PLANNER_ANALYSIS.md  SCENARIO_PLANNER_RULES.md  TODO.md  epm_home.py  epm_rollup.py  epm_scope.py  install.sh  jira-dashboard.html  jira_server.py  package-lock.json  package.json  pyproject.toml  requirements.txt  scenario_planner_improvement_plan.md  statistics_module_extraction_plan.md
backend/: __init__.py  app.py  config_store.py  jira_client.py  runtime_state.py  scenario_drafts.py
docs/: AGENTS.md  README_ANALYTICS.md  SUPPORT-atlassian-oauth-setup.md  TODO.md  architecture.md  atlassian-oauth-setup.md  scenario-planner-rules.md
planning/: __init__.py  analysis.py  capacity.py  models.py  scheduler.py
postmortem/: AGENTS.md  MRT001-missing-teams-stats.md  MRT002-perf-idle-cpu.md  MRT003-scenario-planner-regressions.md  MRT004-performance-degradation-page-load.md  MRT005-false-conflict-detection.md  MRT006-lane-stacking-assignee-interleaving.md  MRT009-sticky-layering-regressions.md  MRT011-epm-settings-overgeneralized-selection-ux.md  MRT012-epm-active-sprint-value-hidden.md  MRT013-epm-active-home-projects-hidden.md  MRT014-epm-cold-load-cache-race.md  MRT016-exec-02-plan-file-map-drift.md  MRT017-chart-hover-readout-placement.md  MRT018-lead-times-stats-panel-overflow.md  MRT020-project-track-filter-bar-bespoke-controls.md  MRT021-project-track-segmented-control-override.md  (+1 more)
(+685 files in other folders)
