[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jira-execution-planner"
version = "0.1.0"
description = "Local Jira execution planning dashboard"
readme = "README.md"
requires-python = ">=3.9"

[project.scripts]
jira-execution-planner = "jira_server:main"

[tool.setuptools]
py-modules = ["jira_server"]

[tool.setuptools.packages.find]
include = ["backend*", "planning*"]

[tool.setuptools.package-data]
"backend.db" = ["alembic.ini", "migrations/**/*.py", "migrations/**/*.mako"]
